new endpoints for webapp
